# vcr-stub-server

./: .coverage  .gitignore  Pipfile  README.md  main.py  pyproject.toml  requirements.txt  server.py  setup.py
routes/: main.py
tests/: fixture_generator.py  integration_tests.py  test_integration.py
tests/fixtures/: delete_post.yaml  get_post-1.yaml  get_post.yaml  get_posts.yaml  json_placeholder_crud.yaml  patch_post.yaml  post_post.yaml  put_post.yaml
vcr_stub_server/: __main__.py  stub_server_handler.py
vcr_stub_server/cassettes/: base_vcr_cassette.py  vcrpy_cassette.py
vcrpy_stub_server/: __main__.py  loaded_cassette.py  stub_server_handler.py
